Rewrote search method to support connections and relay style pagination.